# etisalat_agent

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  docker-compose.yml  handoff_policy.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: citations.py  confidence.py  policy.py  router.py  sanitizer.py
backend/app/middleware/: rate_limit.py
backend/app/rag/: ambiguity.py  confidence.py  intent.py  normalize.py  oos.py  overuse.py  relevance.py
backend/app/schemas/: query.py
backend/app/services/: audit.py  cache.py  decision_result.py  facts.py  llm.py  query_cache.py  retrieval.py
backend/app/telemetry/: cost.py  metrics.py  timing.py
backend/csr_decision_support_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/eval/: results.md  test_set.jsonl
backend/scripts/: run_eval.py  smoke_quality.py
backend/tests/: conftest.py  test_answer_guard.py  test_audit.py  test_cache_telemetry.py  test_citations.py  test_confidence.py  test_facts.py  test_health.py  test_lint_facts.py  test_negative_cache_rate_limit.py  test_policy.py  test_query_normalization.py  test_query_smoke.py  test_rag_quality.py  test_rate_limit.py  test_router.py  test_router_policy.py  test_sanitizer.py  test_smoke.py  test_stage_timings.py
backend/tests/fixtures/facts/: 20260211_sample_billing.md  20260211_sample_network.md  20260220_package_55gb.md
docs/: api-contract.md  architecture.md  data-handling.md  decision-policy.md  demo.md  index.md  runbook.md  (+1 more)
(+175 files in other folders)
