[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csr-decision-support-backend"
version = "0.1.0"
description = "Backend skeleton for CSR decision support"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "httpx>=0.27",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["eval*"]

[tool.pytest.ini_options]
pythonpath = ["."]
